// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<back-top> demo: > render [basic] correctly 1`] = `
<div data-v-5d1555d7="" class="wrapper">
  <ul data-v-5d1555d7="" id="basic-demo">
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
    <li data-v-5d1555d7="">This is the content</li>
  </ul>
  <transition-stub data-v-5d1555d7="" name="fade-in" appear="false" persisted="false" css="true" style="position: absolute;">
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`<back-top> demo: > render [custom] correctly 1`] = `
<div data-v-8f35cac3="" class="wrapper">
  <ul data-v-8f35cac3="" id="custom-demo">
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
    <li data-v-8f35cac3="">This is the content</li>
  </ul>
  <transition-stub data-v-8f35cac3="" name="fade-in" appear="false" persisted="false" css="true" style="position: absolute;">
    <!--v-if-->
  </transition-stub>
</div>
`;
